group homepage heading

--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
             </div>
 
             <div class="homepageTitle animate__animated animate__backInDown">
-                <p>hi, i'm christina.</p>
-            </div>
-
-            <div class = "oneLiner">
+                <p>hi, i'm christina.</p><br>
                 <h2 class = "animate__animated animate__backInUp">atlanta based self-taught developer.</h2>
             </div>
 
