viewport height for homepage titles

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
 
             <div class="homepageTitle animate__animated animate__backInDown">
-                <p>hi, i'm christina.</p><br>
-                <h2 class = "animate__animated animate__backInUp">atlanta based self-taught developer.</h2>
+                <p>hi, i'm christina.</p>
+                <h2>atlanta based self-taught developer.</h2>
             </div>
 
             <div class="aboutMeContainer">
