--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="homepageTitle animate__animated animate__backInDown">
-                <p>hi, i'm christina.</p><br>
+                <p>hi, i'm christina.</p>
                 <h2 class = "animate__animated animate__backInUp">atlanta based self-taught developer.</h2>
             </div>
 
@@ -64,16 +64,16 @@
                     </p>
                 </div>
             </div>
-
-            <div class="whiteSpace"></div>
+        <div class="whiteSpace"></div>
         </div>
+        
+        <footer id = "footer">
+           <p>Author: Christina Lu</p>
+        </footer>
+
     </div>
 
-    <footer id = "footer">
-        <p>Author: Christina Lu<br>
-        <a id = "email" href="mailto: christina.lu3799@gmail.com">christina.lu3799@gmail.com</a>
-        </p>
-    </footer>
+    
  
 </body>
 </html>
