--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,11 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <footer id = "footer">
-        <p>Author: Christina Lu<br>
-        <a id = "email" href="mailto: christina.lu3799@gmail.com">christina.lu3799@gmail.com</a>
-    </footer>
+        <footer id = "footer">
+            <p>Author: Christina Lu</p>
+        </footer>
+ 
+     </div>
 </body>
 </html>
