--- a/blog.html
+++ b/blog.html
@@ -48,14 +48,11 @@
             </div>
 
         </div>
-    </div>
 
-    <footer id = "footer">
-        <p>Author: Christina Lu<br>
-        <a id = "email" href="mailto: christina.lu3799@gmail.com">christina.lu3799@gmail.com</a>
-        </p>
-    </footer>
-
-
+        <footer id = "footer">
+            <p>Author: Christina Lu</p>
+        </footer>
+        
+     </div>
 </body>
 </html>
