--- a/projects.html
+++ b/projects.html
@@ -32,17 +32,14 @@
             <h1 class = "animate__animated animate__backInDown">What am I working on?</h1>
 
             <div class="project-container">
-                <img class="nature1" src="nature1.jpg" alt="">
-                <img class="nature2" src="nature2.jpg" alt="">
-                <img class="nature3" src="nature3.jpg" alt="">
+                
             </div>
         </div>
-    </div>
 
-    <footer id = "footer">
-        <p>Author: Christina Lu<br>
-        <a id = "email" href="mailto: christina.lu3799@gmail.com">christina.lu3799@gmail.com</a>
-        </p>
-    </footer>
+        <footer id = "footer">
+            <p>Author: Christina Lu</p>
+        </footer>
+
+     </div>
 </body>
 </html>
