--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="styles.css" rel="stylesheet">
     <link href="transitions.css" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/0e5dbf1dd6.js" crossorigin="anonymous"></script>
     <title>Home</title>
 </head>
 
@@ -71,15 +72,8 @@
     
         <footer id = "footer">
             <ul>
-                <!--
-                <li><a href="mailto:christina.lu3799@gmail.com">Email</a></li>
-                <li><a href="https://www.linkedin.com/in/christinalu3799/">LinkedIn</a></li>
-                <li><a href="https://github.com/christinalu3799">Github</a></li>     
-                -->
-                <li><a href="mailto:christina.lu3799@gmail.com"><i class="fab fa-envelope" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/christinalu3799/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li> 
-                <li><a href="https://github.com/christinalu3799"><i class="fab fa-github" aria-hidden="true"></i></a></li> 
-                <li><a href="https://www.linkedin.com/in/christinalu3799/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li> 
+                <li><a href="mailto:christina.lu3799@gmail.com"><i class="fab fa-envelope fa-rotate-90" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/christinalu3799/"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li> 
                 <li><a href="https://github.com/christinalu3799"><i class="fab fa-github" aria-hidden="true"></i></a></li> 
             </ul>
 
