--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Font Awesome Style Sheet -->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!-- Animate -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Custom Style Sheet -->
     <link href="styles.css" rel="stylesheet">
     <title>Home</title>
@@ -27,8 +31,11 @@
                 </ul>
             </div>
 
-            <h1 class = "animate__animated animate__backInDown">Blog</h1>
-            
+            <header>
+                <div class="container container--narrow  animate__animated animate__fadeInLeft">
+                    <h1>BLOG</h1>
+                </div>
+            </header>
 
         </div>
 
