--- a/blog.html
+++ b/blog.html
@@ -16,12 +16,16 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Custom Style Sheet -->
     <link href="styles.css" rel="stylesheet">
+    <!-- Swup Page Transitions -->
+    <script src="node_modules/swup/dist/swup.min.js"></script>
+    <script defer src="script.js"></script>
     <title>Home</title>
 </head>
 
 <body>
     <div id="page-container">
-        <div id="main">
+        <div id="main" id="swup" class="transition-fade">
+
             <div class="menuBar">
                 <ul class = "nav">
                     <li><a href="index.html"><button>Home</button></a></li>
