--- a/contact.html
+++ b/contact.html
@@ -16,12 +16,16 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Custom Style Sheet -->
     <link href="styles.css" rel="stylesheet">
+    <!-- Swup Page Transitions -->
+    <script src="node_modules/swup/dist/swup.min.js"></script>
+    <script defer src="script.js"></script>
     <title>Home</title>
 </head>
 
 <body>
     <div id="page-container">
-        <div id="main">
+        <div id="main" id="swup" class="transition-fade">
+
             <div class="menuBar">
                 <ul class = "nav">
                     <li><a href="index.html"><button>Home</button></a></li>
@@ -37,14 +41,10 @@
                 </div>
             </header>
 
-
-            <div class = "container contactMeImage">
+            <div class = "container contactMeImage animate__animated animate__fadeInRight">
                 <img id="contactimage" src="profilepic.jpeg" atl="Profile Picture of Christina">     
             </div>
            
-
-            
-
         </div>
 
         <footer id = "footer">
@@ -73,5 +73,7 @@
     crossorigin="anonymous"></script>
     <!-- Font Awesome JS -->
     <script src="https://kit.fontawesome.com/0e5dbf1dd6.js" crossorigin="anonymous"></script>
+    <!-- Swup Page Transitions -->
+    <script src="node_modules/swup/dist/swup.min.js"></script>
 </body>
 </html>
