--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <!-- Swup Page Transitions -->
     <script src="node_modules/swup/dist/swup.min.js"></script>
     <script defer src="script.js"></script>
-    <title>Home</title>
+    <title>Contact</title>
 </head>
 
 <body>
@@ -50,13 +50,13 @@
         <footer id = "footer">
             <div class="buttonContainer">
                 <div class="button">        
-                    <div class="icons"><a href="mailto:christina.lu3799@gmail.com"><i class="fa fa-envelope"></i></a></div>               
+                    <div class="icons"><a href="mailto:christina.lu3799@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></div>               
                 </div>
                 <div class="button">
-                    <div class="icons"><a href="https://github.com/christinalu3799"><i class="fab fa-github"></i></a></div>                 
+                    <div class="icons"><a href="https://github.com/christinalu3799" target="_blank"><i class="fab fa-github"></i></a></div>                 
                 </div>
                 <div class="button">
-                    <div class="icons"><a href="https://www.linkedin.com/in/christinalu3799/"><i class="fab fa-linkedin"></i></a></div>             
+                    <div class="icons"><a href="https://www.linkedin.com/in/christinalu3799/" target="_blank"><i class="fab fa-linkedin"></i></a></div>             
                 </div>
             </div>
         </footer>
