--- a/index.html
+++ b/index.html
@@ -50,11 +50,14 @@
                     <h2 class = "animate__animated animate__fadeInLeft">atlanta based  self-taught developer </h2>
                     <div class = "aboutMeContent animate__animated animate__fadeInLeft">
                         <p>
-                            In December 2020, I graduated from Georgia Tech with a background in environmental science and public
-                            policy. Currently seeking opportunities where I can leverage my unique background and experiences to pursue my passion in creating innovative solutions with technology.
+                            Graduated from Georgia Tech in December 2020
+                            
+                        </p>
+                        <p> 
+                            Currently seeking opportunities to leverage my unique background and experiences in designing engaging and innovative products
                         </p>
                         <p>
-                            Outside of work, I dedicate my spare time to learning the fundamentals of programming with hopes to become a UX/UI developer. My dream is to a creative professional with the knowledge and skills to influence behavior and motivate collective climate action.
+                            Dedicating my spare time to learning the fundamentals of programming with hopes to become a UX/UI developer
                         </p>
                     </div>
                 </div>          
@@ -74,13 +77,13 @@
         <footer id = "footer">
             <div class="buttonContainer">
                 <div class="button">        
-                    <div class="icons"><a href="mailto:christina.lu3799@gmail.com"><i class="fa fa-envelope"></i></a></div>
+                    <div class="icons"><a href="mailto:christina.lu3799@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></div>
                 </div>
                 <div class="button">
-                    <div class="icons"><a href="https://github.com/christinalu3799"><i class="fab fa-github"></i></a></div>     
+                    <div class="icons"><a href="https://github.com/christinalu3799" target="_blank"><i class="fab fa-github"></i></a></div>     
                 </div>
                 <div class="button">
-                    <div class="icons"><a href="https://www.linkedin.com/in/christinalu3799/"><i class="fab fa-linkedin"></i></a></div>
+                    <div class="icons"><a href="https://www.linkedin.com/in/christinalu3799/" target="_blank"><i class="fab fa-linkedin"></i></a></div>
                 </div>
             </div>
         </footer>
