--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <div class = "aboutMeContent animate__animated animate__fadeInLeft">
                         <p>
                             Graduated from Georgia Tech in December 2020
+                            Change from May 24, 2022
                             
                         </p>
                         <p> 
