--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,14 @@
             <header>
                 <div class="container container--narrow  animate__animated animate__fadeInLeft">
                     <h1>Get in Touch</h1>
+                    <h2>Where to find me?</h2>
+                    <p>
+                        <a href="mailto:christina.lu3799@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+                        <a href="https://github.com/christinalu3799" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/christinalu3799/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    </p>
                 </div>
             </header>
-
-            <div class = "container contactMeImage animate__animated animate__fadeInRight">
-                <img id="contactimage" src="profilepic.jpeg" atl="Profile Picture of Christina">     
-            </div>
            
         </div>
 
