--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 
             <header>
                 <div class="container container--narrow  animate__animated animate__fadeInLeft">
-                    <h1>BLOG</h1>
+                    <h1>Blog</h1>
                 </div>
             </header>
 
