--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="profileImage animate__animated animate__fadeInRight">
                         <img src="headshot.jpg">
                     </div>
-                    <h2 class = "animate__animated animate__fadeInLeft">atlanta based  self-taught developer </h2>
+                    <h2 class = "animate__animated animate__fadeInLeft">aspiring software engineer</h2>
                     <div class = "aboutMeContent animate__animated animate__fadeInLeft">
                         <p>
                             I am currently a coding bootcamp student with General Assembly and on track to graduate at the end of November of this year. In the meantime, I am excited to explore the industry and leverage my problem-solving skills and creativity to a lifetime of learning with other like-minded individuals.
@@ -58,7 +58,10 @@
                         <p>
                             As I continue honing my technical skills, I look forward to connecting with other developers to work on creative and innovative projects.
                         </p>
-                    
+                        <h2>skills</h2>
+                        <p>
+                            HTML5, CSS3, JavaScript, Python, SQL, Figma
+                        </p>
                     </div>
                 </div>          
             </section>
