--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
                     
                 </div>
                 <div class="container project3">
-                    <h2>This Online Portfolio</h2>
+                    <h2>Online Portfolio</h2>
                     <p>
                         It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                     </p>
