--- a/projects.html
+++ b/projects.html
@@ -24,24 +24,24 @@
 
 <body>
     <div id="page-container">
+        
+
+        <div class="menuBar">
+            <ul class = "nav">
+                <li><a href="index.html"><button>Home</button></a></li>
+                <li><a href="about.html"><button>About</button></a></li>
+                <li><a href="projects.html"><button>Projects</button></a></li>
+                <li><a href="contact.html"><button>Contact</button></a></li>
+            </ul>
+        </div>
         <div id="main" id="swup" class="transition-fade">
-
-            <div class="menuBar">
-                <ul class = "nav">
-                    <li><a href="index.html"><button>Home</button></a></li>
-                    <li><a href="projects.html"><button>Projects</button></a></li>
-                    <li><a href="blog.html"><button>Blog</button></a></li>
-                    <li><a href="contact.html"><button>Contact</button></a></li>
-                </ul>
-            </div>
-
             <header>
-                <div class="container container--narrow  animate__animated animate__fadeInLeft">
+                <div class="animate__animated animate__fadeInLeft">
                     <h1>Projects</h1>
                 </div>
             </header>
             
-            <section id="section1" class="projects">
+            <section class="projects_container">
                 <div class="container project1">
                     <h2>Redesign Restaurant Menu using Figma</h2>
                     <p>
