--- a/about.html
+++ b/about.html
@@ -47,19 +47,22 @@
                 </div>
             </header>
 
-            <section class="bodyText aboutMe"> 
+            <section class="bodyText aboutMePage"> 
                 <img src="headshot.jpg" class="profileImage animate__animated animate__fadeInRight">
-                <h3>Education</h3>
-                    <p> 
-                        Software Engineering Immersive Coding Bootcamp at General Assembly (November 2022)
-                    </p>
-                    <p>
-                        BS in Earth and Atmospher Sciences from the Georgia Institute of Technology (Class of 2020)
-                    </p>
-                <h3>Skills</h3>
-                    <p>
-                        HTML5, CSS3, JavaScript, Python, SQL, Figma
-                    </p>
+                <div class="aboutMe animate__animated animate__fadeInRight">
+                    <h3>Education</h3>
+                        <p> 
+                            Software Engineering Immersive Coding Bootcamp at General Assembly (November 2022)
+                        </p>
+                        <p>
+                            BS in Earth and Atmospher Sciences from the Georgia Institute of Technology (Class of 2020)
+                        </p>
+                    <h3>Skills</h3>
+                        <p>
+                            HTML5, CSS3, JavaScript, Python, SQL, Figma
+                        </p>
+                </div>
+                
                 <br>
             </section>
 
