Added more detail to about me page

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+    <div class="transition transition-1 is-active"></div>
     <div id="page-container">
 
         <div class="menuBar">
@@ -118,5 +119,6 @@
     <script src="https://kit.fontawesome.com/0e5dbf1dd6.js" crossorigin="anonymous"></script>
     <!-- Swup Page Transitions -->
     <script src="node_modules/swup/dist/swup.min.js"></script>
+ 
 </body>
 </html>
