--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <div class="transition transition-1 is-active"></div>
     <div id="page-container">
 
         <div class="menuBar">
