--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,7 @@
             
             <section class="projects_container">
                 <div class="container project1">
+                    <p>Please come back soon to see what I've been working on!</p>
                     <!-- <h2>Redesign Restaurant Menu using Figma</h2>
                     <p>
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
