--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
     <!-- Custom Style Sheet -->
     <link href="styles.css" rel="stylesheet">
     <!-- <link href="transitions.css" rel="stylesheet"> -->
-    <!-- JS -->
-    <!-- <script src="script.js"></script> -->
+    
+    
     <title>About Me</title>
 </head>
 <!-- ------------------------------------------------------------------------------------------ -->
@@ -60,7 +60,7 @@
                                 Software Engineering Immersive Coding Bootcamp at General Assembly (Anticipated Graduation date of November 2022)
                             </p>
                             <p>
-                                BS in Earth and Atmospher Sciences from the Georgia Institute of Technology (Class of 2020)
+                                BS in Earth and Atmospheric Sciences from the Georgia Institute of Technology (Class of 2020)
                             </p>
                         <h3>Skills</h3>
                             <p class="mono">Design</p>
@@ -166,6 +166,7 @@
         </footer>
 <!-- ------------------------------------------------------------------------------------------ -->        
      </div>
+     <script src="script.js"></script>
      <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
     crossorigin="anonymous"></script>
