--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,6 @@
     <link href="styles.css" rel="stylesheet">
 
     <!-- <link href="transitions.css" rel="stylesheet"> -->
-    <!-- JS -->
-    <!-- <script src="script.js"></script> -->
-
     <title>Projects</title>
 </head>
 <!-- ------------------------------------------------------------------------------------------ -->
@@ -96,6 +93,7 @@
         </footer>
 <!-- ------------------------------------------------------------------------------------------ -->
      </div>
+     <script src="script.js"></script>
      <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
     crossorigin="anonymous"></script>
