upated nav color

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                                     Responsive Web Design, Prototyping, Figma, Canva
                                 </p>
                             <p class="mono">Development</p>
-                                <p>HTML5, CSS3, JavaScript, Python, Git, SQL, GitHub, VSCode</p>
+                                <p>HTML5, CSS3, JavaScript, DOM Manipulation, Python, Git, SQL, GitHub, VSCode</p>
                     </div>
                 
                 </div>
