--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
     <section id="projects"> 
         <h1>projects</h1>
         <h3>please come back soon to see what projects i've been working on!</h3>
+        <div class="projectContainer">
+            <div class="project1">
+                <p>Coming soon!</p> 
+            </div>
+            <div class="project2">
+                <p>Coming soon!</p>
+            </div>
+            <div class="project3">
+                <p>Coming soon!</p>
+            </div>
+        </div>
     </section>
     
     <section id="contact"> 
