fixing sizing issues

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <a href="mailto:christina.lu3799@gmail.com" target="_blank">get in touch.</a>
         </div>
         <div class="right">
-            <img src='atl-b&w.jpg'>
+            <!-- <img src='atl-b&w.jpg'> -->
         </div>
         
        
