changed resume format to pdf to avoid formatting issues on mobile

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             
         </div>
-        <form method="get" action="resume.docx">
+        <form method="get" action="resume.pdf">
             <button type="submit" class="seeMyWorkBtn">download full resume</button>
         </form> 
         
