added paragraph to about me section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
         <div class="aboutMeContent">
             <div class="left">
                 <h2>Thanks for stopping by!</h2>
+                <br>
+                <h3>I am a software developer who loves solving every day problems through code.</h3>
+                <br>
+                <p>After college, I was considering a career in law and worked as a legal assistant at a small firm to gain some practical experience.</p>
+                <br>
+                <p>However, I became increasingly fascinated by the firm's website and how we can leverage effective design to attract more clients. This was my first, real-world exposure to web development and I have been addicted ever since. I'm passionate about using my creativity and love for problem-solving to create practical solutions to every day problems.</p> 
             </div>
             <div class="right">
                 <h2>Education</h2>
