fade nav bar on scroll

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- NAVIGATION MENU -->
-    <nav>
+    <nav class="fade-in">
         <div class="container">
             <div class="logo">
                 <img src="cl.png">
