fixing hero header

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="hero">
             <p>I am:</p>
             <h1>Christina Lu</h1>
-            <p class="subheading">Front End Junior Developer</p>
+            <p class="subheading">Front End Developer</p>
         </div>
        
          
