changed font-family of about section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="wrapper">
         <!-- NAVIGATION MENU -->
-        <nav class="fade-in">
+        <nav>
         <div class="container">
             <div class="logo">
                 <img src="cl.png">
@@ -45,9 +45,9 @@
 
         <!-- MAIN PAGE CONTENT -->
         <section id="home"> 
-            <div class="hero">
+            <div class="hero animate__animated animate__fadeInDown">
                 <p>I am:</p>
-                <h1>Christina Lu</h1>
+                <h1 >Christina Lu</h1>
                 <p class="subheading">Junior Front End Developer</p>
             </div>  
         </section>
@@ -77,7 +77,7 @@
                             <p>BS in Earth and Atmospheric Sciences (Class of 2020)</p>
                         <h2>Skills</h2>
                             <h3>Design</h3>
-                                <p>Responsive Web Design, Prototyping, Figma, Canva</p>
+                                <p>Responsive Web Design, Wireframing, Prototyping, Figma, Canva</p>
                             <h3>Development</h3>
                                 <p>HTML5, CSS3, JavaScript, DOM Manipulation, Python, Git/GitHub, SQL, VS Code</p>
                         <h2>Experiences</h2>
