--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Custom Style Sheet -->
-    <link href="styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <!-- Browser Icon -->
     <link rel="icon" href="cl.png">
     <!-- <link href="transitions.css" rel="stylesheet"> -->
@@ -197,7 +197,7 @@
         </footer>
 
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
