changed main body font to mono

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                         <br>
                         <p>I'm passionate about using my creativity and love for problem-solving to create practical solutions to every day problems.</p>
                         <br>
+                        <p>During my spare time, I've been working on my personal portfolio and mini-projects to constantly improve upon my coding and problem-solving skills. While this site is still a work in progress, I'm always willing to receive feedback.</p>
                     </div>
                     <div class="right">
                         <h2>Education</h2>
