--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="hero animate__animated animate__fadeInDown">
                 <p>I am:</p>
                 <h1 >Christina Lu</h1>
-                <p class="subheading">Junior Front End Developer</p>
+                <p class="subheading">Front End Developer</p>
             </div>  
         </section>
 
