added alt text to img in about me section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
 
             <div class="atl">
-                <img src="/images/atlskyline.png">
+                <img src="/images/atlskyline.png" alt="outline of atl skyline" class="reveal">
             </div>
         </section>     
         <section id="projects"> 
@@ -122,8 +122,8 @@
             </div> -->
         </section>      
         <section id="contact"> 
-            <h1 class="reveal">Send me a message!</h1>
-            <div class="wide reveal">
+            <h1>Send me a message!</h1>
+            <div class="wide">
             <!-- <div class="left">
                 <img class="headshot" src="headshot.jpg" alt="headshot">
             </div> -->
