added reveal effect to hero

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         </nav> 
         <!-- HOME -->
         <section id="home"> 
-            <div class="hero animate__animated animate__fadeInDown">
+            <!-- animate__animated animate__fadeInDown -->
+            <div class="hero reveal">
                 <p>I am:</p>
                 <h1 >Christina Lu</h1>
                 <p class="subheading">Front End Developer</p>
@@ -63,10 +64,10 @@
                     <p>During my spare time, I enjoy working on my personal portfolio and mini-projects to constantly improve upon my coding and problem-solving skills. While this site is still a work in progress, I'm always looking for feedback.</p>
                     <br>
                     <h2>Education</h2>
-                        <h3>General Assembly | Software Engineering Immersive Coding Bootcamp</h3> 
+                        <h3>General Assembly | Software Engineering Immersive Coding Bootcamp | Remote</h3> 
                             <p>Anticipated Graduation: November 2022</p>
-                        <h3>Georgia Institute of Technology</h3>
-                        <p>BS in Earth and Atmospheric Sciences (Class of 2020)</p>
+                        <h3>Georgia Institute of Technology | BS in Earth and Atmospheric Sciences | Atlanta, GA</h3>
+                            <p>Class of 2020</p>
                     <br>
                     <h2>Skills</h2>
                         <h3>Development</h3>
