updated about me bio

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
         <!-- HOME -->
         <section id="home"> 
             <!-- animate__animated animate__fadeInDown -->
-            <div class="hero">
-                <p>I am:</p>
+            <div class="hero animate__animated animate__fadeInUp">
+                <!-- <img src="/images/blob.png" alt="blob" id="blob"> -->
+                <p>Hello! I'm</p>
                 <h1 >Christina Lu</h1>
-                <p class="subheading">Front End Developer</p>
+                <p class="subheading">Software Engineer</p>
             </div>  
         </section>
         <!-- ABOUT -->
@@ -57,11 +58,12 @@
 
                 <h1 class="reveal">About Me</h1>
                 <div class="aboutMeContent reveal">
-                    <h3 class="tagline">I am a software developer who loves solving every day problems through code.</h3>
+                    <h3 class="tagline">Hi there! I'm Christina, a curious and resourceful software developer based in Atlanta, GA.</h3>
                     <br>
-                    <p>I'm passionate about using my creativity and love for problem-solving to create practical solutions to every day problems.</p>
+                    <p>I enjoy working with all aspects of the design and development process. Watching the ideas in my mind come to life in the browser is like magic to me - I never get sick of it. Follow along as I continue to explore the latest technologies used to create beautiful, functional, and intuitive experiences.</p>
                     <br>
-                    <p>During my spare time, I enjoy working on my personal portfolio and mini-projects to constantly improve upon my coding and problem-solving skills. While this site is still a work in progress, I'm always looking for feedback.</p>
+                    
+                    <p>During my spare time, I enjoy working on my personal portfolio and mini-projects to constantly improve upon my coding and problem-solving skills. This portfolio is still a work in progress but feedback is always welcome!</p>
                     <br>
                     <h2>Education</h2>
                         <h3>General Assembly | Software Engineering Immersive Coding Bootcamp | Remote</h3> 
