adjust spacing between project and contact section

--- a/index.html
+++ b/index.html
@@ -57,9 +57,6 @@
 
         <div class="spacer wave-top"></div>
 
-
-
-
         <!-- ABOUT -->
         <section id="about"> 
             <div class="wave-line"></div>
@@ -89,10 +86,6 @@
       
         </section>  
               <div class="wave-bottom"></div>
-        
-
-
-
 
         <!-- PROJECTS -->
         <section id="projects"> 
@@ -150,10 +143,7 @@
             </div>
         </section>      
 
-
-
-
-
+        <div class="wave-line2"></div>
         <!-- CONTACTS   -->
         <section id="contact"> 
             <h1 class="cursive-heading">Send me a message!</h1>
@@ -173,8 +163,10 @@
             </form>
         </div>       
         </section>
+
         <!-- FOOTER -->
         <footer> 
+            <div class="wave-footer"></div>
             <div class="icons">
                 <div class="icon">
                     <a href="mailto:christina.lu3799@gmail.com" target="_blank"><img src='/images/email-simple.png' alt='email logo'></a>
