--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
              
                     <h1 class="cursive-heading white-font">Skills</h1>
                         <h4 class="white-font">Development</h4>
-                            <p class="white-font">JavaScript, Python, HTML5, CSS3, DOM Manipulation, Git/GitHub, SQL</p>
+                            <p class="white-font">JavaScript, Node.js, Express.js, Python, Flask, HTML5, CSS3, DOM Manipulation, Version Control (Git/GitHub), SQL</p>
                         <h4 class="white-font">Design</h4>
-                            <p class="white-font">Responsive Web Design, Wireframing, Prototyping, Figma, Canva</p>
+                            <p class="white-font">Responsive Web Design, Wireframing, Prototyping, Figma, Canva, Bootstrap</p>
                 </div>
 
                 <form method="get" action="resume.pdf" class="reveal">
