--- a/index.html
+++ b/index.html
@@ -130,9 +130,8 @@
                 <h1 class="reveal cursive-heading">About Me</h1>
                 <div class="aboutMeContent reveal">
 
-                    <p>I love creating beauitful and functional experiences from scratch. Watching the ideas in my mind come to life in the browser is like magic to me - I never get sick of it.</p>
-                    
-                    <p>During my spare time, you can find my binge watching the latest crime documentary or </p>
+                    <h5>I love creating beautiful and functional experiences from scratch.</h5> 
+                    <p>Watching the ideas in my mind come to life in the browser is like magic to me - I never get sick of it.</p>
             
                     <h1 class="cursive-heading">Education</h1>
                     <ul>
