organized svg files into folder

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             
         </section>
 
-        <img src='down-arrow.svg' class="down-arrow animate__animated animate__fadeInUp">
+        <img src='/svg/down-arrow.svg' class="down-arrow animate__animated animate__fadeInUp">
         <div class="wave-top"></div>
 
         <!-- PROJECTS -->
