added 2 more projects to projects section

--- a/tamagotchi.html
+++ b/tamagotchi.html
@@ -38,11 +38,15 @@
     </nav> 
 
     <main>
-        <h1 class="subheading">Personal Portfolio</h1>
+        <h1 class="subheading">Tamagotchi Game</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?</p>
         <div class="project-btns">
-            <a href="https://github.com/christinalu3799/christinalu3799.github.io" target='_blank' class="project-btn">Code</a>
-        </div>
+            <a href='https://christinalu.me/tamagotchi-mini-project/' target="_blank">Play</a>
+            <a href='https://github.com/christinalu3799/tamagotchi-mini-project' target="_blank">Code</a> 
+        </div> 
     </main>
+
     <!-- FOOTER -->
     <footer> 
         <div class="wave-footer"></div>
