completed project descriptions for portfolio and racing game

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,11 +39,22 @@
 
     <main>
         <h1 class="subheading">Personal Portfolio</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?</p>
-        <div class="project-btns">
-            <a href="https://github.com/christinalu3799/christinalu3799.github.io" target='_blank' class="project-btn">Code</a>
+        <div class="project-btns project-page">
+            <a href="https://github.com/christinalu3799/christinalu3799.github.io" target='_blank'>View Source Code</a>
+            <a href="https://christinalu.me/" target="_blank">View Live Site</a>
         </div>
+
+        <h4>Technologies Used</h4>
+        <div class="skills-list">
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Vanilla JavaScript</li>
+            </ul>
+        </div>
+        
+        <h4>Challenges</h4>
+        <p>Being the first website I've ever built from scratch, the current state of my portfolio has gone through many iterations in layout and style. During the process, I encountered many challenges in getting the spacing between page elements to look clean and consistent. Using <span style="font-family:'Courier New', Courier, monospace; font-weight:600">flexbox</span> has been a total game changer not only for responsiveness but also adapting to new elements I may wish to add in the future.</p>
     </main>
 
     <!-- FOOTER -->
