--- a/racingGame.html
+++ b/racingGame.html
@@ -38,13 +38,32 @@
     </nav> 
 
     <main>
-        <h1 class="subheading">Simple 2-Player Racing Game</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?</p>
-        <div class="project-btns">
-            <a href="https://christinalu.me/race-to-the-krusty-krab/" target="_blank">Play</a>
-            <a href="https://github.com/christinalu3799/race-to-the-krusty-krab" target="_blank">Code</a>
+        <h1 class="subheading">Race to the Krusty Krab</h1>
+        <h4>A Simple 2-Player Racing Game</h4>
+        <div class="project-btns project-page">
+            <a href="https://github.com/christinalu3799/race-to-the-krusty-krab" target="_blank">View Source Code</a>
+            <a href="https://christinalu.me/race-to-the-krusty-krab/" target="_blank">Play Game</a>
         </div>
+
+        <h4>Technologies Used</h4>
+        <div class="skills-list">
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Animate.css</li>
+                <li>Vanilla JavaScript</li>
+                <li>DOM Manipulation</li>
+            </ul>
+        </div>
+
+        <h4>Challenges</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?</p>
+        <div class="screenshots">
+            <img src="/images/kk1.png" alt="home page of racing game">
+            <img src="/images/kk2.png" alt="select difficult screen">
+            <img src="/images/kk3.png" alt="game page">
+            <img src="/images/kk4.png" alt="game over page">
+        </div>     
     </main>
 
     <!-- FOOTER -->
