--- a/racingGame.html
+++ b/racingGame.html
@@ -44,7 +44,8 @@
             <a href="https://github.com/christinalu3799/race-to-the-krusty-krab" target="_blank">View Source Code</a>
             <a href="https://christinalu.me/race-to-the-krusty-krab/" target="_blank">Play Game</a>
         </div>
-
+        <br>
+        <p>In this project, I used plain vanilla JavaScript and DOM manipulation to allow the user interact with elements in the game. This 2-player racing game allows two people to use the 'WASD' and arrow keys to navigate the patty wagons around the enemy boat mobiles.</p>
         <h4>Technologies Used</h4>
         <div class="skills-list">
             <ul>
@@ -57,7 +58,7 @@
         </div>
 
         <h4>Challenges</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat commodi. Omnis excepturi cumque, aperiam similique sunt non dolores. Animi quibusdam iure quod praesentium eos, quos non consectetur inventore debitis?</p>
+        <p>I implemented <span style="font-family:'Courier New', Courier, monospace; font-weight:600">.getBoundingClientRect()</span> to check for collisions. It was tricky figuring out the conditions for each side of the patty wagon and determining how these would trigger the game to end for that player.</p>
         <div class="screenshots">
             <img src="/images/kk1.png" alt="home page of racing game">
             <img src="/images/kk2.png" alt="select difficult screen">
