updated portfolio description on main page

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="project-description">
                         <p>I used HTML, CSS, and vanilla JavaScript to create this site from scratch, really pushing the limits of my frontend development and design skills.</p> 
                 
-                        <p>I will constantly be finetuning this site as I continue to learn new skills.</p>
+                        <p>I will constantly be finetuning this site as I continue to learn new frameworks and libraries.</p>
                         <p class="subheading"><em>Mobile | Tablet | Desktop</em></p>
                         <br>
                     </div>
