added restaurant inventory manager app to projects section

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
 <!-- ============================================================= -->
                 <div class="projectCard reveal">
-                    <img src="/images/inventory-manager.png">
+                    <img src="/images/inventory.gif">
 
                     <h5 class="subheading">Restaurant Inventory Manager</h5>
         
@@ -129,7 +129,7 @@
                     </p>
                     <p class="subheading"><em>Desktop Only</em></p>
                     <br>
-                    <a>Coming Soon!</a>
+                    <a href="/inventoryapp.html">See More</a>
                 </div>
 <!-- ============================================================= -->
                 <div class="projectCard reveal">
