--- a/racingGame.html
+++ b/racingGame.html
@@ -59,6 +59,7 @@
 
         <h4>Challenges</h4>
         <p>I implemented <span style="font-family:'Courier New', Courier, monospace; font-weight:600">.getBoundingClientRect()</span> to check for collisions. It was tricky figuring out the conditions for each side of the patty wagon and determining how these would trigger the game to end for that player.</p>
+        <h4>Preview</h4>
         <div class="screenshots">
             <img src="/images/kk1.png" alt="home page of racing game">
             <img src="/images/kk2.png" alt="select difficult screen">
