--- a/inventoryapp.html
+++ b/inventoryapp.html
@@ -37,7 +37,7 @@
         </div>
     </nav> 
 
-    <main>
+    <main id="inventoryapp">
         <h1 class="subheading">Restaurant Inventory Manager</h1>
         <div class="project-btns project-page">
             <a href="https://github.com/christinalu3799/restaurant-inventory-manager" target="_blank">View Source Code</a>
@@ -46,7 +46,7 @@
         </div>
         <br>
         <p>The idea behind this app stems from my current job as a restaurant manager/administrator for a small ramen restaurant. Often when working with the floor manager on my team, I've notice how inefficient it is to use a Google spreadsheet to keep track of inventory on a weekly basis. There are endless rows and columns of items and he is consantly scrolling and resizing the spreadsheet to see each item. Also, the floor manager often complains of how difficult it is to pinpoint which items are running low and when it's time to restock certain items. I wanted to create a simple, user-friendly application that would make the entire inventory process much more streamlined for small business managers like him.
-        </h4>
+        <h4>Technologies Used</h4>
         <div class="skills-list">
             <ul>
                 <li>HTML/CSS/JavaScript</li>
