fixed typo in about me section

--- a/index.html
+++ b/index.html
@@ -191,8 +191,9 @@
 
             <div class="aboutMeContent reveal">
                 <h4>Welcome to my page!</h4>
-                <p>My name is Christina, and I'm a full stack developer who loved creating beautiful and functional experiences from scratch.</p> 
-                <p>My passion for creating apps and websites started when I was asked to maintain the website of a law firm I previously worked at. Watching the ideas in my mind come to life in the browser is like magic to me - I never get sick of it. Specifically, I enjoy building end-to-end, pretty, and interactive apps and websites that are both easy to use and practical.</p>
+                <p>My name is Christina, and I'm a full stack developer who enjoys creating beautiful and functional experiences from scratch.</p> 
+                <p>My passion for making apps and websites started when asked to maintain the website of a law firm I used to work at. Watching the ideas in my mind come to life in the browser is like magic to me - I never got sick of it.</p>
+                <br>
                 <p>I am currently a coding bootcamp student on track to graduate in November of 2022. By then, I will have accumulated over 450 hours of coding experience and knowledge on product development fundamentals, object-oriented programming, MVC frameworks, data modeling, and team collaboration strategies. </p>
 
                 <h4 class="subheading">Education</h4>
