updates to project pages, fixed btn position

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,24 +27,29 @@
 
 <body>
     <!-- NAVIGATION MENU -->
-    <nav>
-        <div class="wave-nav"></div>            
+    <nav> 
         <div class="container">
-            <a href="/index.html">Go Back</a>
-            <div class="logo">
-                <img src="/images/cl2.svg">
-            </div>
+            <a href="index.html">
+                <div class="logo">
+                    <img src="/images/cl2.svg">
+                </div>
+            </a>
         </div>
     </nav> 
 
     <main>
-        <h1 class="subheading">Personal Portfolio</h1>
+        <h2 class="subheading">Personal Portfolio</h2>
         <div class="project-btns project-page">
             <a href="https://github.com/christinalu3799/christinalu3799.github.io" target='_blank'>View Source Code</a>
             <a href="https://christinalu.me/" target="_blank">View Live Site</a>
         </div>
-
-        <h4>Technologies Used</h4>
+        <br> 
+        <h5>Description</h5>
+        <p>
+            The countless iterations of this site tells the story of my progression in web development. I will constantly be striving to improve this site as I continue to learn new skills and technologies.
+        </p>
+        
+        <h5>Technologies Used</h5>
         <div class="skills-list">
             <ul>
                 <li>HTML</li>
@@ -52,9 +57,16 @@
                 <li>Vanilla JavaScript</li>
             </ul>
         </div>
-        
-        <h4>Challenges</h4>
-        <p>Being the first website I've ever built from scratch, the current state of my portfolio has gone through many iterations in layout and style. During the process, I encountered many challenges in getting the spacing between page elements to look clean and consistent. Using <span style="font-family:'Courier New', Courier, monospace; font-weight:600">flexbox</span> has been a total game changer not only for responsiveness but also adapting to new elements I may wish to add in the future.</p>
+        <br>
+        <h5>Challenges</h5>
+        <p>
+            As the first website I've ever built from scratch, the current state of my portfolio has gone through many iterations in themes and layouts.
+        </p>
+        <p>
+            When starting to add more content to my page, I encountered many challenges when trying to make all the elements look clean and consistent. Using <span style="font-family:'Courier New', Courier, monospace; font-weight:600">flexbox</span> has been a total game changer not only for responsive design but also adapting to new elements I may wish to add in the future.
+        </p>
+
+        <a href="/index.html" style="margin: 2rem 0 0 0">Go Back</a>
     </main>
 
     <!-- FOOTER -->
