--- a/racingGame.html
+++ b/racingGame.html
@@ -28,25 +28,27 @@
 <body>
     <!-- NAVIGATION MENU -->
     <nav>
-        <div class="wave-nav"></div>            
         <div class="container">
-            <a href="/index.html">Go Back</a>
-            <div class="logo">
-                <img src="/images/cl2.svg">
-            </div>
+            <a href="index.html">
+                <div class="logo">
+                    <img src="/images/cl2.svg">
+                </div>
+            </a>
         </div>
     </nav> 
 
     <main>
-        <h1 class="subheading">Race to the Krusty Krab</h1>
+        <h2 class="subheading">Race to the Krusty Krab</h2>
         <h4>A Simple 2-Player Racing Game</h4>
         <div class="project-btns project-page">
             <a href="https://github.com/christinalu3799/race-to-the-krusty-krab" target="_blank">View Source Code</a>
             <a href="https://christinalu.me/race-to-the-krusty-krab/" target="_blank">Play Game</a>
         </div>
         <br>
+        <h5>Description</h5>
         <p>In this project, I used plain vanilla JavaScript and DOM manipulation to allow the user interact with elements in the game. This 2-player racing game allows two people to use the 'WASD' and arrow keys to navigate the patty wagons around the enemy boat mobiles.</p>
-        <h4>Technologies Used</h4>
+
+        <h5>Technologies Used</h5>
         <div class="skills-list">
             <ul>
                 <li>HTML</li>
@@ -56,16 +58,18 @@
                 <li>DOM Manipulation</li>
             </ul>
         </div>
-
-        <h4>Challenges</h4>
+        <br>
+        <h5>Challenges</h5>
         <p>I implemented <span style="font-family:'Courier New', Courier, monospace; font-weight:600">.getBoundingClientRect()</span> to check for collisions. It was tricky figuring out the conditions for each side of the patty wagon and determining how these would trigger the game to end for that player.</p>
-        <h4>Preview</h4>
+        <h5>Preview</h5>
         <div class="screenshots">
             <img src="/images/kk1.png" alt="home page of racing game">
             <img src="/images/kk2.png" alt="select difficult screen">
             <img src="/images/kk3.png" alt="game page">
             <img src="/images/kk4.png" alt="game over page">
-        </div>     
+        </div>  
+        
+        <a href="/index.html" style="margin: 2rem 0 0 0">Go Back</a>
     </main>
 
     <!-- FOOTER -->
