--- a/inventoryapp.html
+++ b/inventoryapp.html
@@ -28,25 +28,27 @@
 <body>
     <!-- NAVIGATION MENU -->
     <nav>
-        <div class="wave-nav"></div>            
+        <!-- <div class="wave-nav"></div>             -->
         <div class="container">
-            <a href="/index.html">Go Back</a>
-            <div class="logo">
-                <img src="/images/cl2.svg">
-            </div>
+            <a href="index.html">
+                <div class="logo">
+                    <img src="/images/cl2.svg">
+                </div>
+            </a>
         </div>
     </nav> 
 
     <main id="inventoryapp">
-        <h1 class="subheading">Restaurant Inventory Manager</h1>
+        <h2 class="subheading">Restaurant Inventory Manager</h2>
         <div class="project-btns project-page">
             <a href="https://github.com/christinalu3799/restaurant-inventory-manager" target="_blank">View Source Code</a>
             <a href="https://www.figma.com/file/uIWmm9sm7Eeravt4wfSPGo/PROJECT-2---RESTAURANT-INVENTORY-MANAGER?node-id=4%3A2" target="_blank">View Wireframes</a>
             <a href="https://restaurant-inventory-manager.herokuapp.com/" target="_blank">View App</a>
         </div>
         <br>
+        <h5>Description</h5>
         <p>The idea behind this app stems from my current job as a restaurant manager/administrator for a small ramen restaurant. Often when working with the floor manager on my team, I've notice how inefficient it is to use a Google spreadsheet to keep track of inventory on a weekly basis. There are endless rows and columns of items and he is consantly scrolling and resizing the spreadsheet to see each item. Also, the floor manager often complains of how difficult it is to pinpoint which items are running low and when it's time to restock certain items. I wanted to create a simple, user-friendly application that would make the entire inventory process much more streamlined for small business managers like him.
-        <h4>Technologies Used</h4>
+        <h5>Technologies Used</h5>
         <div class="skills-list">
             <ul>
                 <li>HTML/CSS/JavaScript</li>
@@ -56,10 +58,10 @@
                 <li>Mongoose</li>
             </ul>
         </div>
-
+        <br>
         <!-- <h4>Challenges</h4> -->
         <!-- <p>I implemented <span style="font-family:'Courier New', Courier, monospace; font-weight:600">.getBoundingClientRect()</span> to check for collisions. It was tricky figuring out the conditions for each side of the patty wagon and determining how these would trigger the game to end for that player.</p> -->
-        <h4>Preview</h4>
+        <h5>Preview</h5>
         <div class="screenshots">
             <img src="/images/inv1.png" alt="log in page">
             <img src="/images/inv2.png" alt="dashboard">
@@ -67,7 +69,9 @@
             <img src="/images/inv4.png" alt="table view page">
             <img src="/images/inv5.png" alt="restock page">
             <img src="/images/inv6.png" alt="trash page">
-        </div>     
+        </div>   
+        
+        <a href="/index.html" style="margin: 2rem 0 0 0">Go Back</a>
     </main>
 
     <!-- FOOTER -->
